// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParadeGroupList renders correctly 1`] = `
<SectionList
  ItemSeparatorComponent={[Function]}
  SectionSeparatorComponent={[Function]}
  contentContainerStyle={
    Object {
      "backgroundColor": "#ffffff",
      "paddingTop": 0,
    }
  }
  data={Array []}
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  renderSectionFooter={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          Object {
            "contentType": "paradeGroup",
            "fields": Object {
              "facebookUrl": "https://red-badger.com/1r59u1Oj4T7D55BUw",
              "name": "1x2yj",
              "section": "Section F",
              "twitterUrl": "https://red-badger.com/9bP1RB90H",
              "websiteUrl": "https://red-badger.com/eip8IG6Kik565CkXG",
            },
            "id": "d18Cp545J4C996o5",
            "locale": "en-GB",
            "revision": 1,
          },
        ],
        "index": 0,
        "key": "1",
      },
      Object {
        "data": Array [
          Object {
            "contentType": "paradeGroup",
            "fields": Object {
              "facebookUrl": null,
              "name": "99b3j372i",
              "section": "Section F",
              "twitterUrl": "https://red-badger.com/3K6989xRF5UXeYRQ43y4",
              "websiteUrl": "https://red-badger.com/U8vZ3SjWR8f763prj6la40kMR",
            },
            "id": "642gdEs5xmkdO5v541Oau11NM7T",
            "locale": "en-GB",
            "revision": 1,
          },
        ],
        "index": 1,
        "key": "9",
      },
    ]
  }
  stickySectionHeadersEnabled={true}
  updateCellsBatchingPeriod={50}
  windowSize={10}
/>
`;

exports[`ParadeGroupList renders item separators correctly 1`] = `
<Component
  style={
    Object {
      "height": 12,
    }
  }
/>
`;

exports[`ParadeGroupList renders items correctly 1`] = `
<ContentPadding
  padding={Object {}}
  style={Object {}}
>
  <Text
    color="blackColor"
    markdown={false}
    markdownStyle={Object {}}
    type="text"
  >
    Name: 
    1x2yj
  </Text>
</ContentPadding>
`;

exports[`ParadeGroupList renders section footers correctly 1`] = `
<Component
  style={
    Object {
      "height": 6,
    }
  }
/>
`;

exports[`ParadeGroupList renders section headers correctly 1`] = `
<SectionHeader
  badgeValue={undefined}
  hasShadow={true}
  title="1"
/>
`;

exports[`ParadeGroupList renders section separators correctly 1`] = `
<Component
  style={
    Object {
      "height": 6,
    }
  }
/>
`;
